# Pong_in_terminal

./: .gitignore  .swp  CMakeLists.txt  Makefile  README.md  acceleration_function.c  main  main.c  main.h  naughty_globals.c  naughty_globals.h
pong/: command.txt  main  main.c
